--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -9,14 +9,14 @@
  
     <!-- Alunos -->
     <div class="container">
-        <div class="col s12 m12 l12 quadrado" style="margin-bottom: 0;">
-            <div id="alunos"><h2>Alunos ativos</h2></div>                                    
+        <div class="col s12 m12 quadrado" style="margin-bottom: 0;">
+            <div id="alunos"><h2>Alunos</h2></div>                                    
         </div>
         
         <!-- INICIO DA LISTA -->        
             <div class="row"  id="lista"> 
                 <div class="col s12 m6" style="padding: 0;">
-                    <a id="addAluno" href="/home/cadastrarAlunos" class="waves-effect waves-light btn" style="margin-top:20px;background-color:#ff7e00;font-weight: bold;"><i class="material-icons" style="position: relative;              top: 4px;margin-right: 10px;line-height: normal;">person_add</i>ADICIONAR NOVO ALUNO</a>
+                    <a id="addAluno" href="/home/cadastrarAlunos" class="waves-effect waves-light btn" style="margin-top:20px;background-color:#ff7e00;font-weight: bold;"><i class="material-icons" style="position: relative;              top: 4px;margin-right: 10px;line-height: normal;">person_add</i>ADICIONAR ALUNO</a>
                 </div>
                 <div class="col s12 m6">
                     <div class="nav-wrapper">                        
