--- a/views/novaAula.ejs
+++ b/views/novaAula.ejs
@@ -8,13 +8,15 @@
 
 <div class="cadastro">
 <div class="row">
-    <div class="col s12 m12 l6 center-align" id="cadastroContainer">
+    <!-- <div class="col s12 m12 l6 center-align" id="cadastroContainer">
         <a href="/home/">
             <img class="responsive-img logo" src="../../img/icon512.png" alt="High Performance">
         </a>
         <h1>Cadastrar nova aula</h1>
-    </div>
+    </div> -->
+    
     <div class="col s12 m12 l6">
+        <h1 style="text-align: center;">Cadastrar aula</h1>
         <form class="formValidate" id="formValidate" method="POST" action="/home/novaAula">
             <div class="input-field">
                 <i class="material-icons prefix">account_circle</i>
