--- a/views/financas.ejs
+++ b/views/financas.ejs
@@ -28,50 +28,95 @@
                                     <p class="white-text">Total</p>
                                 </div>
                             </div>
-                            <a href="/home/financas/cadastrarFinancas">
-                            <div class="card2">
-                                <div>
-                                    <i class="material-icons background-round mt-5">exposure_plus_1</i>
-                                </div>
-                                <div class="right-align">
-                                    <p class="white-text">Adicionar mais uma coluna</p>
-                                </div>
-                            </div>
-                        </a>
+                        <div id="card2">
+                            <a class='btn' href='/home/financas/cadastrarFinancas'>Adicionar colunas</a>
+                        </div>
                         </div>
                     </div>
                     
                 </div>
-            <div class="container">
-                <div class="col s12 m12 l6">
-                    <form id="formFinancas" id="form" action="/home/financas/editar?_method=PUT" method="post">
-                        
-                        <div class="input-field col s12">
-                            <select class="black-text" id="name" name="mes" data-error=".errorTxt1">
-                                <option value="Selecione" selected disabled>Selecione</option>
-                            <% for (financa of financas) { %>
-
-                                    <option  value="<%=financa.mes%>"><%=financa.mes%></option> 
-                            <% } %>
-                                </select>
-                                <div class="errorTxt1 right-align"></div>
-                        </div>
-            
-                            <div class="input-field">
-                                <i class="material-icons prefix">monetization_on</i>
-                                <input name="valor" id="valor" type="number" data-error=".errorTxt2">
-                                <label for="valor">Valor</label>
-                                <div class="errorTxt2 right-align"></div>
-                            </div>
+                
+                <div class="container">
+                    <ul class=" collapsible popout">
+                        <li>
+                          <div class="collapsible-header"><i class="material-icons">create</i>Alterar</div>
+                          <div class="collapsible-body">
+        
+                            <div class="container">
+                                <div class="col s12 m12 l6">
+                                    <form id="formFinancas" id="form" action="/home/financas/editar?_method=PUT" method="post">
+                                        
+                                        <div class="input-field col s12">
+                                            <select class="black-text" id="name" name="mes" data-error=".errorTxt1">
+                                                <option value="Selecione" selected disabled>Selecione</option>
+                                            <% for (financa of financas) { %>
+                
+                                                    <option  value="<%=financa.mes%>"><%=financa.mes%></option> 
+                                            <% } %>
+                                                </select>
+                                                <div class="errorTxt1 right-align"></div>
+                                        </div>
                             
-                                <div class="col s12 m6 l6">
-                                    <div class="input-field">
-                                        <button id="btn" class="btn waves-effect waves-light right submit" type="submit" name="action">Salvar</button>
-                                    </div>
+                                            <div class="input-field">
+                                                <i class="material-icons prefix">monetization_on</i>
+                                                <input name="valor" id="valor" type="number" data-error=".errorTxt2">
+                                                <label for="valor">Valor</label>
+                                                <div class="errorTxt2 right-align"></div>
+                                            </div>
+                                            
+                                                <div class="col s12 m6 l6">
+                                                    <div class="input-field">
+                                                        <button id="btn" class="btn waves-effect waves-light right submit" type="submit" name="action">Salvar</button>
+                                                    </div>
+                                            </div>
+                                        </form>
+                                </div>
                             </div>
-                        </form>
+        
+                          </div>
+                        </li>
+        
+        
+                        <li>
+                          <div class="collapsible-header"><i class="material-icons">clear</i>Deletar</div>
+                          <div class="collapsible-body">
+        
+                            <div class="container">
+                                <div class="col s12 m12 l6">
+                                    <form id="formFinancas" id="form" action="/home/financas/deletar" method="post">
+                                        
+                                        <div class="input-field col s12">
+                                            <select class="black-text" id="name" name="mes" data-error=".errorTxt1">
+                                                <option value="Selecione" selected disabled>Selecione</option>
+                                            <% for (financa of financas) { %>
+                
+                                                    <option  value="<%=financa.mes%>"><%=financa.mes%></option> 
+                                            <% } %>
+                                                </select>
+                                                <div class="errorTxt1 right-align"></div>
+                                        </div>
+                            
+                                            <div class="input-field">
+                                                <i class="material-icons prefix">monetization_on</i>
+                                                <input name="valor" id="valor" type="number" data-error=".errorTxt2">
+                                                <label for="valor">Valor</label>
+                                                <div class="errorTxt2 right-align"></div>
+                                            </div>
+                                            
+                                                <div class="col s12 m6 l6">
+                                                    <div class="input-field">
+                                                        <button id="btn" class="btn waves-effect waves-light right submit" type="submit" name="action">Salvar</button>
+                                                    </div>
+                                            </div>
+                                        </form>
+                                </div>
+                            </div>
+        
+                          </div>
+                        </li>
+                      </ul>
                 </div>
-            </div>
+
             </div>
             <% } else{ %>  
             <div style="height: 100vh;">
@@ -83,6 +128,8 @@
                 </div>
             </div>
             <% } %>
+
+            
        
 
         
@@ -137,4 +184,7 @@ var myChart = new Chart(ctx, {
         },
     },
 });
+    </script>
+    <script>
+         $('.dropdown-trigger').dropdown();
     </script>
