Ajustando pagina crie

--- a/public/css/financas.css
+++ b/public/css/financas.css
@@ -91,20 +91,24 @@
     margin-bottom: 100px;
 }
 
-#formFinancas{
+#formFinancas, #formFinancasDelete{
     margin-bottom: 20vh;
 }
 
 #formFinancas li:focus,
-#formFinancas .input-field input[type=number]:focus  {
+#formFinancasDelete li:focus,
+#formFinancas .input-field input[type=number]:focus,  
+#formFinancasDelete .input-field input[type=number]:focus  {
     border-bottom: 1px solid #ff7e00;
     box-shadow: 0 1px 0 0 #ff7e00;
 }
 
+#formFinancasDelete .input-field label,
 #formFinancas .input-field label {
     color: #000;
 }
 
+#formFinancasDelete .input-field .prefix.active,
 #formFinancas .input-field .prefix.active {
     color: #ff7e00;
 }
@@ -113,6 +117,7 @@
     color: red;
 }
 
+#formFinancasDelete li>span,
 #formFinancas li>span {
     color: #000 !important;
   }
@@ -124,7 +129,24 @@
     width: 20%;
     font-weight: bold
    }
+   
+#formFinancas button{
+    margin-top: 20px;
+    background-color: #ff7e00;
+    border-radius: 8px;
+    width: 20%;
+    font-weight: bold
+   }
 
+#formFinancasDelete button{
+    margin-top: 20px;
+    background-color: #F44336;
+    border-radius: 8px;
+    width: 20%;
+    font-weight: bold
+   }
+
+   #formFinancasDelete button:hover,
    #formFinancas button:hover{
     background-color: white;
     color: black;
