--- a/views/cadastroFinancas.ejs
+++ b/views/cadastroFinancas.ejs
@@ -14,7 +14,7 @@
 
 <div class="row" id="containerCadFinancas">
     <div class="col s12 m8 l6" id="containerForm">
-    <form class="formValidate" id="formCadFinancas" method="POST" action="/home/financas/cadastrarFinancas" enctype="multipart/form-data">
+    <form class="formValidate" id="formCadFinancas" method="POST" action="/home/cadastrarFinancas" enctype="multipart/form-data">
         <div class="input-field">
             <i class="material-icons prefix">pie_chart</i>
             <input name="mes" id="mes" type="text" data-error=".errorTxt1">
