--- a/views/financas.ejs
+++ b/views/financas.ejs
@@ -83,7 +83,7 @@
         
                             <div class="container">
                                 <div class="col s12 m12 l6">
-                                    <form id="formFinancas" id="form" action="/home/financas/deletar" method="post">
+                                    <form id="formFinancasDelete" id="form" action="/home/deletarFinancas?_method=DELETE" method="post">
                                         
                                         <div class="input-field col s12">
                                             <select class="black-text" id="name" name="mes" data-error=".errorTxt1">
@@ -105,7 +105,7 @@
                                             
                                                 <div class="col s12 m6 l6">
                                                     <div class="input-field">
-                                                        <button id="btn" class="btn waves-effect waves-light right submit" type="submit" name="action">Salvar</button>
+                                                        <button id="btn red" class="btn waves-effect waves-light right submit" type="submit" name="action">Deletar</button>
                                                     </div>
                                             </div>
                                         </form>
