Arrumando pagina cadastro financas

--- a/views/cadastroFinancas.ejs
+++ b/views/cadastroFinancas.ejs
@@ -23,8 +23,8 @@
         </div>
         <div class="input-field">
             <i class="material-icons prefix">monetization_on</i>
-            <input name="valor" id="valor" type="number" data-error=".errorTxt2">
-            <label for="valor">Valor</label>
+            <input name="preco" id="preco" type="number" data-error=".errorTxt2">
+            <label for="preco">Valor</label>
             <div class="errorTxt2 right-align "></div>
         </div>
         <div class="input-field">
