--- a/views/crie.ejs
+++ b/views/crie.ejs
@@ -45,8 +45,8 @@
 </div>
 </div>
 <script>
-let dados = <%= periodo %>
-console.log(dados)
+// let dados = <%= periodo %>
+// console.log(dados)
 </script>
 
 
