controller showTraino com a lista de mensalidades para o aluno

--- a/views/treino.ejs
+++ b/views/treino.ejs
@@ -78,7 +78,7 @@
         </div>
     </div>
 
-    <script src="../../js/treino.js"></script>
+    <script src="/js/treino.js"></script>
     
     <%- include('partials/footer') %>
     <%- include('partials/rodape') %>
