Adicioeni pagamentos na pagina do aluno

--- a/public/css/treino.css
+++ b/public/css/treino.css
@@ -24,6 +24,11 @@
     }
 }
 
+.pagamentosContainer {
+    margin-top: 30px;
+    margin-bottom: 80px;
+}
+
 #perfil {
     border: 1px solid #ddd;
     border-bottom: none;
