--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -32,7 +32,7 @@
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">call</i>
-                        <input name="cel" attrname="telephone1" type="tel" id="cel" data-error=".errorTxt3">
+                        <input name="cel" attrname="telephone1" type="tel" id="tel" data-error=".errorTxt3">
                         <label for="cel">Celular</label>
                         <div class="errorTxt3 right-align "></div>
                     </div>
