Finalizando crud finanças

--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -151,7 +151,7 @@
 
         <!-- BOTAO -->
         <div class="container center-align" id="tituloBtn">
-            <h2>Faça parte da nossa equipe!</h2>
+            <h2>Fale conosco!</h2>
         </div>
 
 
