--- a/views/treino.ejs
+++ b/views/treino.ejs
@@ -79,10 +79,10 @@
     </div>
 
     <div class="container">
-        <ul class="collapsible">
+        <ul class="collapsible" style="margin-bottom: 100px;">
             <li>
                 <div class="collapsible-header">
-                    <i class="material-icons">assignment_ind</i> <p>Pagamentos</p>
+                    <i class="material-icons" style="margin-top: 15px;">assignment_ind</i> <p>Pagamentos</p>
                 </div>
                 <div class="collapsible-body"><span>
                     <div class="col s12 m12 l12">
