Arrumando pagina alunos

--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -73,7 +73,10 @@
         </div>       
         
     </div>
+
     
     <%- include('partials/footer') %>
+    <script src="/js/linktr.js"></script>
     <%- include('partials/rodape') %>
+
    
