--- a/views/treino.ejs
+++ b/views/treino.ejs
@@ -98,21 +98,24 @@
                             <% for(pagamento of mensalidades) { %>
                             
                             <tbody>
-                                    <tr data-url="/home/treino/<%= aluno.id %>">
-                                    <td><%= pagamento.mes_ref %></td>
-                                    <td><%= pagamento.valor %></td>
-                                    <td>
-                                        <form action="/home/treino/<%=aluno.id%>/pago" method="post">
-                                            <div class="switch">
-                                                <label>
-                                                Off
-                                                <input name="pago" type="checkbox">
-                                                <span class="lever"></span>
-                                                On
-                                                </label>
-                                            </div>
-                                        </form>
-                                    </td>
+                                
+                                <tr data-url="#">
+
+                                <td><%= pagamento.mes_ref %></td>
+                                <td><%= pagamento.valor %></td>
+                                <td>
+                                    <form action="/salvar/pagamento" method="post">      
+                                    <div class="switch">
+                                        <% let genreChk = pagamento.status ? 'checked' : '' %>
+                                        <% let genPago = pagamento.status ? 'Pago' : '' %>
+                                        <label>
+                                        <input name="pago" type="checkbox" <%=genreChk%>>
+                                        <span class="lever"></span>
+                                        <%=genPago%>
+                                        </label>
+                                    </div>
+                                    </form>
+                                </td>
                                 </tr>
                                 <% } %>
 
