Adicionar aluno com o plano e aulas

--- a/views/cadastrarAlunos.ejs
+++ b/views/cadastrarAlunos.ejs
@@ -55,8 +55,14 @@
                     
                     <div class="input-field">
                         <i class="material-icons prefix">arrow_forward</i>
-                        <input name="tempo" type="number" class="form-control">
-                        <label for="tempo">Meses/Aulas</label>
+                        <input name="tempo_plano" type="number" class="form-control">
+                        <label for="tempo_plano">Meses/Aulas</label>
+                        <div class="errorTxt4 right-align"></div>
+                    </div>
+                    <div class="input-field">
+                        <i class="material-icons prefix">arrow_forward</i>
+                        <input name="valor" type="number" class="form-control">
+                        <label for="valor">Valor</label>
                         <div class="errorTxt4 right-align"></div>
                     </div>
                     
