--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,7 +7,9 @@
 <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/additional-methods.min.js"></script>
 
+
 <script src="/js/main.js"></script>
+<script src="/js/grafico.js"></script>
 <script src="/js/topo.js"></script>
 <script src="/js/loader.js"></script>
 <script src="/js/formCadastro.js"></script>
