--- a/views/crie.ejs
+++ b/views/crie.ejs
@@ -33,7 +33,42 @@
                         <span class="new badge orange totalAulas" data-badge-caption="aulas" style="font-size: 20px;font-weight: bold;"><%= aulaDia.qtde %></span>
                     </div>
                     <div class = "collapsible-body">
-                        <p>aula</p>
+                        <span>
+                            <div class="col s12 m12 l12">
+                                <table class="highlight centered table responsive-table" id="tabledata">
+                                    <thead>
+                                        <tr>
+                                            <th id="marginTh">Imagem</th>
+                                            <th>Nome</th>
+                                            <th>Aula</th>
+                                            <th>Horario</th>
+                                            <th>Contato</th>
+                                            <th>Remover</th>
+                                        </tr>
+                                    </thead>
+
+                                    <% for(aula of aulas) { %>
+                                    <% if (aula.data_aula == aulaDia ) { %>
+                                    <tbody>
+                                        <% for (aluno of aula.aluno) { %>
+                                            <tr>
+                                            <td><img id="foto-aluno" src="<%= aluno.img %>" alt="Foto José"></td>
+                                            <td><%= aluno.nome %></td>
+                                            <td><%= aula.nome %></td>
+                                            <td><%= aula.horario %></td>
+                                            <td> <i class="material-icons prefix tooltipped" data-position="bottom"
+                                                    data-tooltip="Enviar SMS">contact_mail</i></td>
+                                            <td><a href="#" class="black-text">Remover aluno</a></td>
+                                        </tr>
+                                        <% } %>
+                                        <% } %>
+                                        <% } %>
+
+                                        
+                                    </tbody>
+                                </table>
+                            </div>
+                        </span>
                     </div>
                     
                 </li>
